--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
     </style>
 </head>
 <body>
+    <script>
+        window.onload = function() {
+            if (!confirm("This website will access your location. Do you want to allow it?")) {
+                alert("You denied access to location. The information might not be accurate.");
+            }
+        }
+    </script>
     <header>
         <h1>Weather and Location Information</h1>
     </header>
