--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
             color: #333;
         }
     </style>
+    <script>
+        window.onload = function() {
+            if (!confirm("This website will access your location. Do you want to allow it?")) {
+                alert("You denied access to location. The information might not be accurate.");
+            }
+        }
+    </script>
 </head>
 <body>
     <header>
@@ -121,11 +128,6 @@
     </div>
 
     <script>
-        window.onload = function() {
-            if (!confirm("This website will access your location. Do you want to allow it?")) {
-                alert("You denied access to location. The information might not be accurate.");
-            }
-        }
         // Fetch location data
         fetch('https://ipinfo.io/json')
             .then(response => response.json())
